fixed alignment

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -89,7 +89,7 @@ body {
 }
 
 #biomeCountContainer {
-    margin-top: 15px;
+    margin-top: 11px;
     padding: 31px 0;
     border: 2px solid black;
 }
